# fc-ai-coding-workbench

./: .claude_resumes.txt  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  TODO_FEATURES.md  build-dmg.sh  index.html  package-lock.json  package.json  vite.config.ts  使用说明.md
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  proxy.rs  state.rs
src-tauri/src/commands/: db_commands.rs  env_commands.rs  git_commands.rs  keychain_commands.rs  mod.rs  project_commands.rs  provider_commands.rs  setup_commands.rs  terminal_commands.rs
src-tauri/src/db/: messages.rs  migrations.rs  mod.rs  projects.rs  sessions.rs  settings.rs  threads.rs  workspaces.rs
src-tauri/src/git/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/terminal/: mod.rs
src/components/center-panel/: CenterPanel.tsx  Composer.tsx  ContextInjectBar.tsx  FileViewer.tsx  MessageItem.tsx  MessageList.tsx  ProviderModelModeBar.tsx  Terminal.tsx  editorLanguages.ts  editorTheme.ts  layoutTree.ts
src/components/common/: ClaudeCommandInstaller.tsx  ConfirmDialog.tsx  EnvironmentSetup.tsx  GuideModal.tsx  QuickOpen.tsx  (+2 more)
src/hooks/: useKeyboardShortcuts.ts
src/ipc/: commands.ts
src/lib/: i18n.ts  types.ts
src/stores/: chatStore.ts  fileStore.ts  gitStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts
src/styles/: global.css  layout.css
(+16 files in other folders)
