[package]
name = "shiguangAI"
version = "0.1.0"
description = "拾光 AI 编程平台"
authors = ["you"]
edition = "2021"

[lib]
name = "shiguang_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures-util = "0.3"
eventsource-stream = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
thiserror = "2"
portable-pty = "0.8"
tauri-plugin-clipboard-manager = "2"
